fixed upload issues
